--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiodns==2.0.0
 aiohttp==3.7.4.post0
 alabaster==0.7.12
-anaconda-client==1.7.2
+#anaconda-client==1.7.2
 anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1610472525955/work
 anyio @ file:///opt/concourse/worker/volumes/live/4ff95164-2ca6-4efb-5c02-5afee907620d/volume/anyio_1617783322708/work/dist
 appdirs==1.4.4
