--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,8 @@ locket==0.2.1
 mccabe==0.6.1
 mistune==0.8.4
 mkl-fft==1.2.0
-mkl-random==1.1.0
-mkl-service==2.3.0
+mkl-random==1.2.0
+mkl-service>=2.3.0
 mpmath==1.2.1
 multidict==5.1.0
 multipledispatch==0.6.0
