--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ pycosat==0.6.3
 pycrypto==2.6.1
 pycurl==7.43.0.6
 PyMySQL==1.0.2
-pyodbc===4.0.0-unsupported
+pyodbc===4.0.1
 pytest==6.2.3
 python-dotenv==0.17.1
 PyYAML==5.4.1
