--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-aiodns==2.0.0
-aiohttp==3.7.4.post0
 alabaster==0.7.12
+anaconda-client==1.7.2
 appdirs==1.4.4
 applaunchservices==0.2.1
 argh==0.26.2
 async-generator==1.10
-async-timeout==3.0.1
 atomicwrites==1.4.0
 bkcharts==0.2
 black==19.10b0
-blinker==1.4
 boto==2.49.0
 Bottleneck==1.3.2
 brotlipy==0.7.0
 ccxt==1.50.6
 certifi==2020.12.5
+clyent==1.2.2
+colorcet==2.0.6
 contextlib2==0.6.0.post1
 cycler==0.10.0
 cytoolz==0.11.0
-datashape==0.5.2
+datashader==0.12.1
+datashape==0.5.4
 entrypoints==0.3
 et-xmlfile==1.0.1
 fastcache==1.1.0
@@ -26,28 +26,28 @@ future==0.18.2
 gmpy2==2.0.8
 h5py==2.10.0
 HeapDict==1.0.1
+holoviews==1.14.4
 holoviz==0.11.3
+hvplot==0.7.2
+itsdangerous==1.1.0
 jdcal==1.4.1
 json5==0.9.5
 jupyter==1.0.0
 llvmlite==0.36.0
 locket==0.2.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.2.0
-mkl-service>=2.3.0
+mkl-fft==1.3.0
+mkl-service==2.3.0
 mpmath==1.2.1
-multidict==5.1.0
 multipledispatch==0.6.0
-multitasking==0.0.9
 mypy-extensions==0.4.3
 netCDF4==1.5.3
-numexpr==2.7.1
-numpy==1.17.4
-oauthlib==3.1.0
 olefile==0.46
 pandas==0.24.2
+panel==0.11.3
+param==1.10.1
 parso==0.7.0
 pathspec==0.7.0
 pathtools==0.1.2
@@ -56,22 +56,18 @@ pep8==1.7.1
 pkginfo==1.7.0
 plotly==4.14.3
 ply==3.11
-praw==7.2.0
-prawcore==2.0.0
-psycopg2==2.7.7
-pycares==4.0.0
 pycosat==0.6.3
 pycrypto==2.6.1
+pyct==0.4.8
 pycurl==7.43.0.6
-PyMySQL==1.0.2
-pyodbc===4.0.1
+pyodbc===4.0.0-unsupported
 pytest==6.2.3
 python-dotenv==0.17.1
+pyviz-comms==2.0.1
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
 QtPy==1.9.0
-requests-oauthlib==1.3.0
 retrying==1.3.3
 scikit-image==0.18.1
 simplegeneric==0.8.1
@@ -80,15 +76,12 @@ terminado==0.9.4
 thrift==0.11.0
 tifffile==2020.10.1
 unicodecsv==0.14.1
-update-checker==0.18.0
-voila==0.2.10
 webencodings==0.5.1
-websocket-client==1.0.0
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 xarray==0.11.3
+xlwings==0.23.0
 xlwt==1.3.0
-yarl==1.6.3
 yfinance==0.1.59
 zict==2.0.0
 zope.event==4.5.0
